Make time slider vertical alignment fixed

--- a/stylesheets/bcb.css
+++ b/stylesheets/bcb.css
@@ -1335,8 +1335,8 @@ a.divHover:hover, a.divHover:visited, a.divHover:active {
     visibility: visible;
     margin-left: -2em;
     opacity: unset;
-    top: 18px;
-    left: 22px;
+    top: 10px;
+    left: 23px;
     transform: rotate(135deg);
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 
@@ -1356,7 +1356,7 @@ a.divHover:hover, a.divHover:visited, a.divHover:active {
 
 .GlobalTimeSlider .tooltip-inner, .GlobalTimeSliderRange .tooltip-inner {
     max-width: 200px;
-    padding: 5px 8px;
+    padding: 4px 8px;
     color: #ffffff;
     text-align: center;
     text-decoration: none;
@@ -1922,3 +1922,12 @@ div.chartTooltip p{
 .leaflet-control-zoom-out {
     z-index: 1000 !important;
 }
+
+.ts-control-holder {
+    padding-top: 17px;
+}
+
+/*.map-display {*/
+    /*left: 1px;*/
+    /*top: 32px;*/
+/*}*/
